adding product cards

--- a/css/main.css
+++ b/css/main.css
@@ -98,7 +98,53 @@ textarea {
    ========================================================================== */
 
 
+/* *************************
+*****************************
+****** HEADER + NAVBAR ******
+*****************************
+************************* */
 
+.bgdark{
+    background-color: #39363d;
+  }
+  
+  .colororangelist{
+    color: white;
+  }
+  
+  .colororangelist:hover{
+    text-decoration: none;
+    color: #ff5400;
+  }
+  
+  .colororange{
+    color: #ff5400;
+  }
+  
+  img[src="img/logobasket2.png"]{
+    width: 70%;
+  }
+  
+  .footer{
+    bottom: 0;
+  }
+  
+  @media screen and (min-width: 768px) {
+    #navbarNavAltMarkup{
+      display: none !important;
+    }
+  }
+  
+  @media screen and (max-width: 767px) {
+    .d-nonenav{
+      display: none !important;
+    }
+  }
+
+  
+  .col-6 {
+      margin-top:150px;
+  }
 
 
 
